--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --config ./webpack.config.js ---mode development"
   },
   "repository": {
     "type": "git",
@@ -12,9 +12,14 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/kniarzyn/tsreact-emotion-storybook-boilerplate/issues"
   },
-  "homepage": "https://github.com/kniarzyn/tsreact-emotion-storybook-boilerplate#readme"
+  "homepage": "https://github.com/kniarzyn/tsreact-emotion-storybook-boilerplate#readme",
+  "devDependencies": {
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.0.2",
+    "webpack-dev-server": "^3.1.4"
+  }
 }
