--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js ---mode development",
+    "start": "webpack-dev-server --config ./webpack.config.js ---mode development --color",
     "build": "NODE_ENV=production "
   },
   "repository": {
@@ -23,6 +23,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-react-app": "^3.1.1",
     "babel-preset-stage-2": "^6.24.1",
+    "react-hot-loader": "^4.2.0",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.2",
     "webpack-dev-server": "^3.1.4"
