--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/kniarzyn/tsreact-emotion-storybook-boilerplate#readme",
   "devDependencies": {
+    "awesome-typescript-loader": "^5.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-react-app": "^3.1.1",
