--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "awesome-typescript-loader": "^5.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-emotion": "^9.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-preset-stage-2": "^6.24.1",
     "react-hot-loader": "^4.2.0",
@@ -34,7 +35,9 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "emotion": "^9.1.3",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "react-emotion": "^9.1.3"
   }
 }
